<resources>
    <string name="app_name">Calendar Sync</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login">Đăng nhập</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="remember">Ghi nhớ?</string>
    <string name="splash_screen">Splash screen</string>
    <string name="home">Trang chủ</string>
    <string name="sync_up">Đồng bộ lên</string>
    <string name="sync_down">Đồng bộ xuống</string>
    <string name="sync_history">Lịch sử đồng bộ</string>
    <string name="calendar">Lịch</string>
    <string name="settings">Cài đặt</string>
    <string name="about">Thông tin</string>
    <string name="logout">Đăng xuất</string>
    <string name="add">Thêm mới</string>
    <string name="cancel">Hủy</string>
    <string name="save">Lưu</string>
    <string name="begin_time">Thời gian bắt đầu</string>
    <string name="task_name">Tên công việc</string>
    <string name="end_time">Thời gian kết thúc</string>
    <string name="task_content">Nội dung công việc</string>
    <string name="place">Vị trí</string>
    <string name="date_sync">Số ngày đồng bộ</string>
    <string name="color_setting">Màu sắc</string>
    <string name="sync_task">Công việc đã được đồng bộ</string>
    <string name="nosync_task">Công việc chưa được đồng bộ</string>
    <string name="msg_select_color">Chọn một màu</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="select_deselect">Chọn/Bỏ chọn tất cả</string>
    <string name="cac_cong_viec_da_dong_bo">Các công việc vừa được đồng bộ</string>
    <string name="task_todate">Các công việc trong ngày</string>
</resources>
