<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="husc.se.dcopen.calendarsync.LoginActivity"
    android:background="@color/dark_green"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_login"
            android:contentDescription="@string/login" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAllCaps="true"
            android:text="@string/login"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:textColorHint="@color/gray"
        android:gravity="center"/>
    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:password="true"
        android:textColorHint="@color/gray"
        android:gravity="center"/>
    <CheckBox
        android:id="@+id/ckb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/white"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_transparent"/>
</LinearLayout>
