<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_task_layout"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/add"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/title_dialog_size"
            android:paddingLeft="@dimen/dialog_padding"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:background="@drawable/button_transparent_no_border"
            android:layout_weight="2"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/button_transparent_no_border"
            android:text="@string/save"
            android:layout_weight="2"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="@dimen/label_size"/>
        <EditText
            android:id="@+id/txt_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginBottom="10dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/lbl_begin_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/begin_time"
            android:textSize="@dimen/label_size"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/txt_begin_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:background="@drawable/button_transparent_no_border"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end">
                <TextView
                    android:id="@+id/txt_begin_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:background="@drawable/button_transparent_no_border"/>
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/lbl_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="@dimen/label_size"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/txt_end_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:background="@drawable/button_transparent_no_border"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end">
                <TextView
                    android:id="@+id/txt_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:background="@drawable/button_transparent_no_border"/>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/lbl_task_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_content"
            android:textSize="@dimen/label_size"/>
        <EditText
            android:id="@+id/txt_task_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:lines="1"
            android:inputType="text" />

        <TextView
            android:id="@+id/lbl_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textSize="@dimen/label_size"/>
        <EditText
            android:id="@+id/txt_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"/>
    </LinearLayout>
</LinearLayout>