<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dark_green"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/title_dialog_size"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"/>
        <Button
            android:id="@+id/btn_setting_cancel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_transparent_no_border"
            android:text="@string/cancel"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btn_setting_save"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_transparent_no_border"
            android:text="@string/save"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:dividerVertical"
        android:showDividers="end"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_sync"
            android:textSize="@dimen/label_size"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_up"
                    android:textSize="@dimen/label_size"
                    android:layout_weight="1"
                    android:gravity="center_vertical"/>
                <TextView
                    android:id="@+id/lbl_sync_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="0"
                    android:textSize="@dimen/label_size"
                    android:gravity="end"/>
            </LinearLayout>

            <husc.se.dcopen.calendarsync.CustomSeekBar
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:max="60"
                android:progress="30"
                android:progressDrawable="@android:color/transparent"
                android:id="@+id/seek_sync_up" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_down"
                    android:textSize="@dimen/label_size"
                    android:layout_weight="1"
                    android:gravity="center_vertical"/>
                <TextView
                    android:id="@+id/lbl_sync_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="0"
                    android:lines="1"
                    android:textSize="@dimen/label_size"
                    android:layout_weight="6"/>
            </LinearLayout>
            <husc.se.dcopen.calendarsync.CustomSeekBar
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:max="60"
                android:progress="30"
                android:progressDrawable="@android:color/transparent"
                android:id="@+id/seek_sync_down" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_setting"
            android:textSize="@dimen/label_size"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/sync_task"/>
            <husc.se.dcopen.calendarsync.LineColorPicker
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/picker_sync"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:colors="@array/rainbow"
                app:selectedColorIndex="3"
                app:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/nosync_task"/>
            <husc.se.dcopen.calendarsync.LineColorPicker
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/picker_nosync"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:colors="@array/rainbow"
                app:selectedColorIndex="3"
                app:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/task_todate"/>
            <husc.se.dcopen.calendarsync.LineColorPicker
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/picker_task_todate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:colors="@array/rainbow"
                app:selectedColorIndex="3"
                app:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>